@@ -320,8 +320,8 @@ void add_to_dW_fw_2r4p_fit4(int specR1, int specR2,
         with kinf determined from Ainf, ninf, Einf
              k0 determined from A0, n0, E0
  Units:
- A0 in cm^6 mole^(-2) s^(-1) K^(-n) 
- Ainf in cm^3 (mole s)^(-1) K^(-n)
+ A0 in cm^6 mole^(-2) s^(-1) K^(-n0) 
+ Ainf in cm^3 (mole s)^(-1) K^(-ninf)
  Einf,E0 in cal/mole
  T in Kelvin
  X in mole/cm3
@@ -372,8 +372,8 @@ void add_to_dW_fwbw_3r2p_Lindemann(int specR1, int specR2, int specR3,
         with kinf determined from Ainf, ninf, Einf
              k0 determined from A0, n0, E0
  Units:
- A0 in cm^3 (mole s)^(-1) K^(-n) 
- Ainf in s^(-1) K^(-n)
+ A0 in cm^3 (mole s)^(-1) K^(-n0) 
+ Ainf in s^(-1) K^(-ninf)
  Einf,E0 in cal/mole
  T in Kelvin
  X in mole/cm3
